# OverDrive-Architecture

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.client-cpp  Dockerfile.client-python  Dockerfile.server  Dockerfile.tests  README.md  comprehensive_test.sh  docker-compose.yml  e2e_test.py  test-sidebar.sh  test_permissions_enforcement.sh  test_results.txt  test_starred_recent.sh
.claude/: settings.local.json
Client/src/: main.cpp
Client/src/Client/: Client.cpp  Client.h  Client.py  client_main.cpp
Client/src/communication/: SocketClientComm.cpp  SocketClientComm.h  UserClientComm.cpp  UserClientComm.h
Client/tests/: test_UserClientComm.cpp
Common/include/communication/: ClientServerComm.cpp  ICommunication.h
Common/include/protocol/: CommandResult.h  ParsedCommand.h
Server/include/server/: server.cpp  server.h
Server/src/: Client.cpp  Client.h  client_main.cpp  main.cpp
Server/src/commands/: ClientCommandFactory.cpp  ClientCommandFactory.h  DeleteCommand.cpp  DeleteCommand.h  GetCommand.cpp  GetCommand.h  ICommand.h  ICommandFactory.h  PostCommand.cpp  PostCommand.h  SearchCommand.cpp  SearchCommand.h
Server/src/communication/: ClientServerComm.cpp  ClientServerComm.h
Server/src/compressor/: RLECompressor.cpp
Server/src/executors/: CommandExecutor.cpp  CommandExecutor.h
Server/src/file/: CompressedFileStorage.cpp  CompressedFileStorage.h  HashPathMapper.cpp  HashPathMapper.h  IFileManagement.h  IPathMapper.h  LocalFileManagement.cpp  LocalFileStorage.h
Server/src/handlers/: ClientContext.h  ClientHandler.cpp  ClientHandler.h  ClientHandlerFactory.cpp  ClientHandlerFactory.h  IClientHandlerFactory.h
Server/src/parsers/: CommandParser.cpp  CommandParser.h
Server/src/server/: server.cpp  server.h  server_main.cpp
Server/src/threading/: DedicatedThreadManager.cpp  DedicatedThreadManager.h  IRunnable.h  IThreadManager.h  ThreadPoolManager.cpp  ThreadPoolManager.h
Server/tests/: AddCommandTest.cpp  DeleteCommandTest.cpp  GetCommandTest.cpp  JsomMetaDataStore.cpp  JsonMetaDataStore.cpp  PostCommandTest.cpp  SearchCommandTest.cpp  ThreadSafeFileManagement_test.cpp  test_ClientServerComm.cpp  test_CommandExecutor.cpp  test_CommandParsing.cpp  test_LocalFileManagement.cpp  test_LocalFileStorage.cpp  test_Server.cpp  test_compreesedFileStorage.cpp  test_hash_path_mapper.cpp
Server/tests/mocks/: MockFileManager.h
Storage-Server/include/server/: server.h
Storage-Server/src/commands/: GetCommand.cpp  PostCommand.h
Storage-Server/src/executors/: IExecutor.h
Storage-Server/src/handlers/: ClientHandler.h  ClientHandlerFactory.h
Storage-Server/src/parsers/: CommandParser.cpp
Storage-Server/src/server/: server_main.cpp
Storage-Server/tests/: GetCommandTest.cpp  PostCommandTest.cpp  test_LocalFileStorage.cpp
Storage-Server/tests/mocks/: MockFileManager.h
Wiki/: Home.md  NodeJS_Web_API.md  Part1_CLI_Foundation.md  Part2_TCP_Storage_Server.md  Part3_NodeJS_Web_API.md  Part4_React_Full_Stack.md  React_Full_Stack.md  TCP_Storage_Server.md
commands/: ICommand.h
docs/: thread_safety_list_operation.cpp
files/: file2.txt
react-client/: .dockerignore  .env  ARCHITECTURE_ACTIONS.md  Dockerfile  nginx.conf  package-lock.json  package.json
react-client/public/: index.html
react-client/src/: index.css  index.js
react-client/src/App/: App.css  App.js
react-client/src/context/: AuthContext.js  FilesContext.js  NavigationContext.js  StorageErrorContext.js  ThemeContext.js  UserPreferencesContext.js
react-client/src/hooks/: TRUNCATION_HANDLER_README.md  useAppEvent.js  useDownload.js  useFiles.js  (+6 more)
server_data/: 601e6ce0-dc16-4b20-8aa3-0b2eed8cde57
src/: app.cpp  app.h  main.cpp
src/Utility/: StringUtils.cpp  StringUtils.h
src/app/: App.cpp  App.h
src/commands/: AddCommand.cpp  AddCommand.h  GetCommand.cpp  GetCommand.h  ICommand.h  SearchCommand.cpp  SearchCommand.h
src/compressor/: ICompressor.h  RLECompressor.cpp  RLECompressor.h
src/executors/: CommandExecutor.cpp  CommandExecutor.h  IExecutor.h
src/file/: IFileManagement.h  LocalFileManagement.cpp  LocalFileManagement.h
src/menus/: ConsoleMenu.cpp  ConsoleMenu.h  IMenu.h
src/parsers/: CommandParser.cpp  CommandParser.h  IParser.h  ParsedCommand.h
storage-server/: Dockerfile
storage-server/tests/: DeleteCommandTest.cpp  GetCommandTest.cpp  RLECompression_test.cpp  SearchCommandTest.cpp  ThreadSafeFileManagement_test.cpp  test_LocalFileManagement.cpp
tests/: AddCommandTest.cpp  FileManagement_test.cpp  GetCommandTest.cpp  RLECompression_test.cpp  SearchCommandTest.cpp  test_AddCommand.cpp  test_CommandExecuter.cpp  test_CommandExecutor.cpp  test_CommandParsing.cpp  test_CommandResult.cpp  test_ConsoleMenu.cpp  test_ConsoleMenu_and_parsing_old_integration.cpp  test_RLECompression.cpp  test_StringUtils.cpp
tests/integration/: Integration_test.cpp
tests/mocks/: MockFileManager.h
tests/unit/: AddCommandTest.cpp
web-server/: .env  .env.example  Dockerfile  package-lock.json  package.json  server.js
web-server/controllers/: fileController.js  permissionController.js  searchController.js  tokenController.js  userController.js
web-server/middleware/: auth.js  errorHandler.js
web-server/models/: EmailValidator.js  FileItem.js  Permission.js  User.js  fileItem.js  filesStore.js  index.js  permission.js  permissionStore.js  user.js  usersStore.js
web-server/routes/: fileRoutes.js  searchRoutes.js  userRoutes.js
web-server/services/: fileService.js  index.js  permissionService.js  storageClient.js  userService.js
web-server/src/: server.js
web-server/tests/: comprehensive_test.sh  debug_shared_star.sh  run_all.sh  test_advanced_search.sh  test_api.sh  test_comprehensive.sh  test_debug_shared_star.sh  test_download.sh  test_filtering.sh  test_framework.sh  test_multiline.sh  test_permissions_enforcement.sh  test_permissions_recursive.sh  test_permissions_sync_on_move.sh  test_preferences.sh  test_starred_recent.sh  test_storage.sh  test_trash.sh  test_user_get.sh  test_user_update.sh
web-server/utils/: idGenerator.js  index.js
(+180 files in other folders)
